--- a/src/components/Plans/Plans.scss
+++ b/src/components/Plans/Plans.scss
@@ -70,6 +70,9 @@ $--appColor: #3c3f45;
         }
     
         &:not(&:nth-child(2)){
+            
+                fill: $--orange;
+            
             &:hover{
              transform: translateY(-10px);
             }
