--- a/src/components/Reasons/Reasons.scss
+++ b/src/components/Reasons/Reasons.scss
@@ -53,6 +53,7 @@ $--appColor: #3c3f45;
                 -webkit-text-stroke-width: 1px;
                 color: transparent;
                 font-style: italic;
+                font-family: Arial, Helvetica, sans-serif;
             }
         }
         .Reasons_tick {
