--- a/src/css/HeroSection/Hero.css
+++ b/src/css/HeroSection/Hero.css
@@ -2,6 +2,11 @@
   display: flex;
   justify-content: space-between;
 }
+.hero .hero-blur {
+  width: 22rem;
+  height: 30rem;
+  left: 0;
+}
 .hero .hero_left {
   padding: 2rem;
   padding-top: 1.5rem;
@@ -20,8 +25,7 @@
   text-transform: uppercase;
   overflow: hidden;
 }
-.hero .hero_left .hero_fitness::before {
-  content: "";
+.hero .hero_left .hero_fitness div {
   position: absolute;
   z-index: 1;
   top: 5px;
