--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,10 @@
 ::-webkit-scrollbar{
   display: none;
 }
+.blur{
+  background: rgba(253,120,43,1);
+  position: absolute;
+  filter: blur(212px);
+  z-index: -9;
+
+}
