--- a/src/components/CoverSectiion/CoverSection.scss
+++ b/src/components/CoverSectiion/CoverSection.scss
@@ -13,6 +13,8 @@ $--appColor: #3c3f45;
     background-repeat: no-repeat;
     background-origin: content-box;
     position: relative;
+    margin-bottom: 8rem;
+   
    
   
     &::after{
