--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,19 @@
 footer {
+    position: relative;
+    .hero-blur-left{
+        width: 22rem;
+        height: 30rem;
+        left: 10rem;
+        
+    }
+    .hero-blur-right{
+        width: 22rem;
+        height: 30rem;
+        right: 10rem;
+        background-color: #fa5042;
+        
+    }
+    
     .footer-content {
         display: grid;
         grid-template-columns: auto auto auto;
