--- a/src/components/HeroSection/Hero.scss
+++ b/src/components/HeroSection/Hero.scss
@@ -9,6 +9,12 @@ $--caloryCard: #656565;
     display: flex;
     justify-content: space-between;
 
+    .hero-blur{
+        width: 22rem;
+        height: 30rem;
+        left: 0;
+        
+    }
     .hero_left {
         padding: 2rem;
         padding-top: 1.5rem;
@@ -27,8 +33,8 @@ $--caloryCard: #656565;
             text-transform: uppercase;
             overflow: hidden;
 
-            &::before {
-                content: "";
+           div {
+               
                 position: absolute;
                 z-index: 1;
                 top: 5px;
