--- a/src/css/CoverSectiion/CoverSection.css
+++ b/src/css/CoverSectiion/CoverSection.css
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-origin: content-box;
   position: relative;
+  margin-bottom: 8rem;
 }
 .cover::after {
   content: "";
