--- a/src/css/testImonials/testImonials.css
+++ b/src/css/testImonials/testImonials.css
@@ -1,7 +1,6 @@
 .testImonials {
   display: flex;
   padding: 0 3rem;
-  margin-bottom: 10rem;
 }
 .testImonials .testImonials_left {
   flex: 1 1;
@@ -29,6 +28,7 @@
   font-family: Arial, Helvetica, sans-serif;
   color: transparent;
   font-size: 3.4rem;
+  font-style: italic;
 }
 .testImonials .testImonials_left .testImonials_coatch {
   font-weight: 600;
