--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,6 +1,9 @@
 .home{
     display: flex;
     flex-direction: column;
-    gap: 13rem;
+    gap: 10rem;
     
+    @media screen and (max-width:768px) {
+        gap: 6rem;
+    }
 }
