--- a/src/css/Home/Home.css
+++ b/src/css/Home/Home.css
@@ -1,5 +1,10 @@
 .home {
   display: flex;
   flex-direction: column;
-  gap: 13rem;
+  gap: 10rem;
+}
+@media screen and (max-width: 768px) {
+  .home {
+    gap: 6rem;
+  }
 }
