--- a/src/components/Programs/Programs.scss
+++ b/src/components/Programs/Programs.scss
@@ -1,83 +1,95 @@
-$planCard:linear-gradient(210.41deg, #fa5042 1.14%, #ffa739 100.75%);
+$planCard: linear-gradient(210.41deg, #fa5042 1.14%, #ffa739 100.75%);
 
-.programs{
+.programs {
   display: flex;
   flex-direction: column;
- 
- .programes-box{
+
+  .programes-box {
     display: flex;
+   
     justify-content: center;
-margin: 0 auto;
+    margin: 0 auto;
     align-items: center;
     padding: 2rem;
     color: #fff;
     gap: 1.5rem;
-    .programes-content{
-        height: max-content;
-        max-width: 300px;
-       
+    .programes-content {
+      height: max-content;
+      max-width: 300px;
+
+      display: flex;
+      flex-direction: column;
+
+      background-color: gray;
+      padding: 2rem;
+      gap: 10;
+      fill: #fff;
+      transition: 0.5s all ease-in;
+
+      &:hover {
+        background: $planCard;
+        transition: 0.5s all;
+      }
+      span {
         display: flex;
-        flex-direction: column;
-        
-      
-        background-color: gray;
-        padding: 2rem;
-        gap: 10;
-        fill: #fff;
-        transition:  0.5s all ease-in;
-
-        &:hover{
-          background: $planCard;
-          transition:  0.5s all ;
-
+        align-items: center;
+        gap: 1rem;
+        img {
+          width: 1.2rem;
         }
-        span{
-          display: flex;
-          align-items: center;
-          gap: 1rem;
-          img{
-            width: 1.2rem;
-          }
-        }
-      svg{
-width: 3rem;
-height: 3rem;       }
-        p{
-            line-height: 30px;
-            
-        }
-
+      }
+      svg {
+        width: 3rem;
+        height: 3rem;
+      }
+      p {
+        line-height: 30px;
+      }
     }
- 
- }
-  .programs_header{
+  }
+  .programs_header {
     display: flex;
-font-weight: 600;
+    font-weight: 600;
     justify-content: center;
     align-items: center;
     gap: 6rem;
 
-    span{
-        font-size: 3.6rem;
-        font-style: italic;
-        color: #fff;
-        font-family: Inter,sans-serif;
+    span {
+      font-size: 3.6rem;
+      font-style: italic;
+      color: #fff;
+      font-family: Inter, sans-serif;
     }
-    span:nth-child(1){
+    span:nth-child(1) {
       -webkit-text-stroke-color: #fff;
       -webkit-text-stroke-width: 1px;
       color: transparent;
-      font-family: Arial,Helvetica,sans-serif;  
-  
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    span:nth-child(3) {
+      -webkit-text-stroke-color: #fff;
+      -webkit-text-stroke-width: 1px;
+      color: transparent;
+      font-family: Arial, Helvetica, sans-serif;
+    }
   }
-  span:nth-child(3){
-    -webkit-text-stroke-color: #fff;
-    -webkit-text-stroke-width: 1px;
-    color: transparent;
-    font-family: Arial,Helvetica,sans-serif;  
-
-
 }
+
+@media screen and (max-width: 768px) {
+  .programs_header {
+    display: flex;
+    flex-direction: column;
+
+    margin-top: 15rem;
+    gap: 1rem !important;
+    span {
+      font-size: 2rem !important;
+      z-index: 100;
+    }
   }
+  .programes-box {
+    display: flex;
+   flex-direction: column;
     
+  }
 }
