--- a/src/components/Reasons/Reasons.scss
+++ b/src/components/Reasons/Reasons.scss
@@ -16,6 +16,7 @@ $--appColor: #3c3f45;
         grid-template-columns: repeat(3, 1fr);
         gap: 1rem;
         grid-auto-rows: 1fr;
+        
         & > :nth-child(1) {
             width: 12rem;
             grid-row: 1/3;
@@ -77,6 +78,42 @@ $--appColor: #3c3f45;
             .logos {
                 display: flex;
                 gap: 1rem;
+            }
+        }
+    }
+}
+@media screen and (max-width: 768px) {
+    .Reasons {
+        flex-direction: column;
+        padding: 0 1rem;
+        transform: scale(0.9);
+        .Reasons_left {
+            flex: 1 1;
+            display: grid;
+
+            & > :nth-child(1) {
+                width: auto;
+
+                height: 21rem;
+            }
+            & > :nth-child(2) {
+                width: 14rem;
+                height: 14rem;
+            }
+            & > :nth-child(3) {
+                width: auto;
+                height: 6rem;
+            }
+            & > :nth-child(4) {
+                width: auto;
+                height: 6rem;
+            }
+        }
+        .Reasons_right {
+            h1 {
+                font-size: 1.8rem;
+                color: #fff;
+                margin: 20px 0;
             }
         }
     }
