--- a/src/components/subscribe/subscribe.scss
+++ b/src/components/subscribe/subscribe.scss
@@ -9,7 +9,7 @@ $--appColor: #3c3f45;
 .subscribe {
   display: flex;
   gap: 10rem;
-  .subscribe-left{
+  .subscribe-left {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -18,22 +18,21 @@ $--appColor: #3c3f45;
     font-weight: 600;
     padding: 2rem;
   }
-  .subscribe-left{
+  .subscribe-left {
     position: relative;
-    hr{
+    hr {
       position: absolute;
       width: 10.5rem;
       top: 0;
       border: 2px solid $--orange;
       border-radius: 20%;
-      
     }
     div:nth-child(2) {
       .stroke-text {
         -webkit-text-stroke-color: #fff;
         -webkit-text-stroke-width: 1px;
         margin-right: 25px;
-  
+
         color: transparent;
         font-family: Arial, Helvetica, sans-serif;
       }
@@ -43,43 +42,61 @@ $--appColor: #3c3f45;
         -webkit-text-stroke-color: #fff;
         -webkit-text-stroke-width: 1px;
         margin-left: 25px;
-  
+
         color: transparent;
         font-family: Arial, Helvetica, sans-serif;
       }
     }
   }
-  .subscribe-right{
+  .subscribe-right {
     display: flex;
     align-items: center;
-    .subscribe-content{
+    .subscribe-content {
       background-color: gray;
       width: max-content;
       display: flex;
       align-items: center;
       padding: 1.5rem;
 
-      button{
+      button {
         width: 6rem;
         border: 0;
-        color:$--lightgray;
+        color: $--lightgray;
         background-color: $--orange;
         text-align: center;
         font-weight: 500;
         padding: 11px 0;
         cursor: pointer;
-    }
-    input{
-      background-color: transparent;
-      border: none;
-      color: #000;
-      outline: none;
-      &::placeholder{
-        color:$--lightgray;
-                font-size: 15px;
-        font-weight: 500;
+      }
+      input {
+        background-color: transparent;
+        border: none;
+        color: #000;
+        outline: none;
+        &::placeholder {
+          color: $--lightgray;
+          font-size: 15px;
+          font-weight: 500;
+        }
       }
     }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .subscribe {
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+
+    margin-top: 2.5rem;
+    .subscribe-left {
+      font-size: 2rem;
+    }
+    .subscribe-left {
+      hr {
+        display: none;
+      }
     }
   }
 }
