--- a/src/css/testImonials/testImonials.css
+++ b/src/css/testImonials/testImonials.css
@@ -68,7 +68,7 @@
   top: 2rem;
 }
 .testImonials .testImonials_right .testImonials_arrows {
-  bottom: 1rem;
+  bottom: -20rem;
   display: flex;
   gap: 1rem;
   right: 35rem;
@@ -77,4 +77,57 @@
 .testImonials .testImonials_right .testImonials_arrows img {
   width: 20px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .testImonials {
+    flex-direction: column;
+  }
+  .testImonials .testImonials_right {
+    position: relative;
+    left: 7rem;
+    z-index: 10001;
+    transform: scale(0.8);
+    margin-bottom: 13rem;
+    margin-top: 2rem;
+  }
+  .testImonials .testImonials_arrows {
+    bottom: -26rem !important;
+    display: block;
+    left: -2rem;
+  }
+  .testImonials .testImonials_left .reveiw p {
+    font-size: small;
+    line-height: 40px;
+  }
+  .testImonials .testImonials_left span:nth-child(1) {
+    font-weight: 500;
+    font-size: medium;
+  }
+  .testImonials .testImonials_left span:nth-child(3) {
+    font-size: small;
+  }
+  .testImonials .testImonials_left h3 {
+    margin: 1.4rem 0;
+    font-size: 2.4rem;
+  }
+  .testImonials .testImonials_left .testImonials_coatch {
+    font-size: 1.2rem;
+  }
+}
+@media screen and (min-width: 769px) {
+  .testImonials .testImonials_right {
+    margin-bottom: 13rem;
+  }
+  .testImonials .testImonials_left .reveiw p {
+    width: 30rem;
+    line-height: 40px;
+  }
+  .testImonials .testImonials_left h3 {
+    margin: 1.4rem 0;
+    font-size: 2.4rem;
+  }
+  .testImonials .testImonials_left .testImonials_coatch {
+    font-size: 1.2rem;
+  }
 }
