--- a/src/css/mobileMenu/MobileMenu.css
+++ b/src/css/mobileMenu/MobileMenu.css
@@ -2,7 +2,6 @@
   display: flex;
   height: 100vh;
   flex-direction: column;
-  align-items: center;
   position: absolute;
   width: 100%;
   top: -2rem;
@@ -15,22 +14,22 @@
   margin: 0;
   z-index: 100;
 }
-.showMenu a {
-  margin-bottom: 1.5rem;
-  border-bottom: 1px solid rgba(128, 128, 128, 0.345);
-  width: 100%;
-  text-decoration: none;
-}
-.showMenu a li {
+.showMenu li {
   width: max-content;
   padding: 5px;
   text-transform: capitalize;
   color: rgb(90, 89, 89);
   transition: 0.4s all ease-in-out;
   margin-left: 2rem;
+  margin-bottom: 1.5rem;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.345);
+  width: 100%;
 }
-.showMenu a li:hover {
+.showMenu li:hover {
   color: #fbb403;
+}
+.showMenu li a {
+  text-decoration: none;
 }
 @media screen and (min-width: 800px) {
   .showMenu {
